# api-testing-suite

./: .gitignore  AGENTS.md  README.md  pyproject.toml  report.html  results.xml
.github/workflows/: ci.yml
sdet-interview-prep/notes/: week-01-pytest-mid-to-advanced.md
src/api_testing_suite/: client.py  models.py
tests/: conftest.py  test_comments.py  test_posts.py  test_users.py
