[project]
name = "api-testing-suite"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.3",
    "requests",
    "pydantic>=2.0",
    "anthropic",
    "pytest-html",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_testing_suite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--html=report.html --self-contained-html"
markers = [
    "smoke: fast, critical path tests",
    "regression: full coverage tests",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
